--- a/module-2-files/demos/01-Clustering/rain.ipynb
+++ b/module-2-files/demos/01-Clustering/rain.ipynb
@@ -352,7 +352,7 @@
       ],
       "source": [
         "# Create a DataFrame with the synthetic data\n",
-        "df = pd.DataFrame(X, columns=[\"Feature 1\", \"Feature 2\"])\n",
+        "df = pd.DataFrame(x, columns=[\"Feature 1\", \"Feature 2\"])\n",
         "\n",
         "# Add the y variables as the \"Target\" column.\n",
         "df[\"Target\"] = y\n",
@@ -416,7 +416,7 @@
       "outputs": [],
       "source": [
         "# Generate five synthetic clusters\n",
-        "X, y = make_blobs(\n",
+        "x, y = make_blobs(\n",
         "    centers=3,\n",
         "    n_features=2,\n",
         "    random_state=1)\n",
@@ -460,7 +460,7 @@
       ],
       "source": [
         "# Create a DataFrame with the synthetic data\n",
-        "df = pd.DataFrame(X, columns=[\"Feature 1\", \"Feature 2\"])\n",
+        "df = pd.DataFrame(x, columns=[\"Feature 1\", \"Feature 2\"])\n",
         "\n",
         "# Add the y variables as the \"Target\" column.\n",
         "df[\"Target\"] = y\n",
