--- a/rleander_spam_detector.ipynb
+++ b/rleander_spam_detector.ipynb
@@ -748,7 +748,7 @@
         "# Train a Logistic Regression model and print the model score\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "\n",
-        "logistic_model = LogisticRegression()\n",
+        "logistic_model = LogisticRegression(random_state=1)\n",
         "logistic_model.fit(X_train_scaled, y_train)\n",
         "train_score = logistic_model.score(X_train_scaled, y_train)\n",
         "print(f\"Training Score: {train_score}\")\n",
@@ -845,7 +845,7 @@
         "# Train a Random Forest Classifier model and print the model score\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
         "\n",
-        "random_forest_model = RandomForestClassifier()\n",
+        "random_forest_model = RandomForestClassifier(random_state=1)\n",
         "random_forest_model.fit(X_train_scaled, y_train)\n",
         "rf_train_score = random_forest_model.score(X_train_scaled, y_train)\n",
         "print(f\"Random Forest Training Score: {rf_train_score}\")\n"
